[gd_scene load_steps=4 format=3 uid="uid://cxiy4xyvnhdlr"]

[ext_resource type="Script" path="res://src/scripts/main.gd" id="1_main_script"]

[sub_resource type="Theme" id="Theme_1"]

[sub_resource type="Environment" id="Environment_1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_main_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rhythm Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1")

[node name="SongSelectionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Song"

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1")

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Gameplay" type="Node" parent="."]
visible = false

[node name="Camera2D" type="Camera2D" parent="Gameplay"]
position = Vector2(960, 540)

[connection signal="pressed" from="VBoxContainer/SongSelectionButton" to="." method="_on_song_selection_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]